--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "router.js": "https://github.com/tildeio/router.js.git#f7b4b11543222c52d91df861544592a8c1dcea8a",
     "route-recognizer": "https://github.com/tildeio/route-recognizer.git#8e1058e29de741b8e05690c69da9ec402a167c69",
     "htmlbars": "https://github.com/tildeio/htmlbars.git#a3e2369f1859f4993a9b64a80d50556ef2ebe246",
-    "dag-map": "https://github.com/krisselden/dag-map.git#e307363256fe918f426e5a646cb5f5062d3245be"
+    "dag-map": "https://github.com/krisselden/dag-map.git#e307363256fe918f426e5a646cb5f5062d3245be",
+    "simple-html-tokenizer": "https://github.com/tildeio/simple-html-tokenizer.git#8e1779cc79cdaf787dacbd013c2069790816c5ac"
   }
 }
